--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -43,5 +43,8 @@ jobs:
       - name: Install dependencies
         run: yarn
 
+      - name: Build
+        run: yarn build
+
       - name: Run tests
         run: yarn test
